# kidle

./: .gitignore  CMakeLists.txt  curse.cpp  curse.h  harmonicloophelpers.h  main.cpp  sharedvariable.h  timehelpers.h
model/: CMakeLists.txt  generator.cpp  generators.cpp  world.cpp
model/include/model/: defs.h  generator.h  generators.h  world.h
models/: CMakeLists.txt  generator.cpp  generators.cpp  world.cpp
models/include/models/: generator.h  generators.h  world.h
view/: CMakeLists.txt  curse.cpp  generator.cpp  generators.cpp  score.cpp  world.cpp
view/include/view/: curse.h  generator.h  generators.h  score.h  world.h
